--- a/public/css/login1.css
+++ b/public/css/login1.css
@@ -1,4 +1,4 @@
-/* *,
+*,
 *:before,
 *:after {
   padding: 0;
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #f0ffff;
+  background-color: #ffffff;
 }
 .background {
   width: 430px;
@@ -23,12 +23,12 @@ body {
   border-radius: 50%;
 }
 .shape:first-child {
-  background: linear-gradient(#1845ad, #23a2f6);
+  background: linear-gradient(#fefefe, #ffffff);
   left: -80px;
   top: -40px;
 }
 .shape:last-child {
-  background: linear-gradient(to right, #ff512f, #f09819);
+  background: linear-gradient(to right, #f9ad9e, #ffbe63);
   right: -80px;
   bottom: -50px;
 }
@@ -39,19 +39,19 @@ body {
   border-radius: 50%;
 }
 .shape2:first-child {
-  background: linear-gradient(#23a2f6, #1845ad);
+  background: linear-gradient(#f8fcff, #fdfdfd);
   left: 460px;
   top: 470px;
 }
 .shape2:last-child {
-  background: linear-gradient(to right, #f09819, #ff512f);
+  background: linear-gradient(to right, #ffe2b9, #ffccc2);
   right: 470px;
   bottom: 470px;
 }
 form {
   height: 520px;
   width: 400px;
-  background-color: rgb(240, 245, 255);
+  background-color: rgb(52, 188, 18);
   position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
@@ -59,12 +59,12 @@ form {
   border-radius: 10px;
 
   border: 2px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  /* box-shadow: 0 0 40px rgba(8, 7, 16, 0.6); */
   padding: 50px 35px;
 }
 form * {
   font-family: 'Poppins', sans-serif;
-  color: #ffffff;
+  color: #000000;
   letter-spacing: 0.5px;
   outline: none;
   border: none;
@@ -87,7 +87,7 @@ input {
   color: #000000;
   height: 50px;
   width: 100%;
-  background-color: #ffebcd;
+  background-color: #ffffff;
   border-radius: 3px;
   padding: 0 10px;
   margin-top: 8px;
@@ -100,11 +100,11 @@ input {
 .button-login {
   margin-top: 50px;
   width: 100%;
-  background-color: #daa250;
+  background-color: #f9c16d;
   color: #080710;
   padding: 15px 0;
   font-size: 18px;
   font-weight: 600;
   border-radius: 5px;
   cursor: pointer;
-} */
+}
